INCLUDES = -I$(top_srcdir)/src -I/usr/include/libxml2 $(all_includes)
METASOURCES = AUTO
noinst_LTLIBRARIES = libdbesj.la libslatec_common.la
libdbesj_la_SOURCES = d1mach.f dasyjy.f dbesj.f djairy.f fdump.f i1mach.f \
	j4save.f xercnt.f xerhlt.f xermsg.f xerprn.f xersve.f xgetua.f

libslatec_common_la_SOURCES = dlngam.f d9lgmc.f dgamma.f dcsevl.f dgamlm.f \
	initds.f
