INCLUDES = -I$(top_srcdir)/src -I/usr/include/libxml2 $(all_includes)
METASOURCES = AUTO
noinst_LTLIBRARIES = libdbesj.la libslatec_common.la libzbesj.la
libdbesj_la_SOURCES = dasyjy.f dbesj.f djairy.f

libslatec_common_la_SOURCES = dlngam.f d9lgmc.f dgamma.f dcsevl.f dgamlm.f \
		initds.f dgamln.f d1mach.f fdump.f i1mach.f j4save.f lsame.f xercnt.f xerhlt.f \
	xermsg.f xerprn.f xersve.f xgetua.f
libzbesj_la_SOURCES = zabs.f zacai.f zairy.f zasyi.f zbesj.f zbinu.f zbknu.f \
	zbuni.f zdiv.f zexp.f zkscl.f zlog.f zmlri.f zmlt.f zrati.f zs1s2.f zseri.f \
	zshch.f zsqrt.f zuchk.f zunhj.f zuni1.f zuni2.f zunik.f zuoik.f zwrsk.f
