INCLUDES = -I$(top_srcdir)/src -I/usr/include/libxml2 $(all_includes)
METASOURCES = AUTO
noinst_LIBRARIES = libslatecmin.a
libslatecmin_a_SOURCES = d1mach.f dgamln.f fdump.f i1mach.f j4save.f xercnt.f\
	xerhlt.f xermsg.f xerprn.f xersve.f xgetua.f zabs.f zacai.f zairy.f\
	zasyi.f zbesj.f zbinu.f zbknu.f zbuni.f zdiv.f zexp.f zkscl.f zlog.f\
	zmlri.f zmlt.f zrati.f zs1s2.f zseri.f zshch.f zsqrt.f zuchk.f zunhj.f\
	zuni1.f zuni2.f zunik.f zuoik.f zwrsk.f
