INCLUDES = -I$(top_srcdir)/src $(all_includes)
METASOURCES = AUTO
include_HEADERS = Exception.h FileSet.h FileSingleDefs.h FileSingle.h Getopt.h\
	helpers.h KeyValFile.h ParamContainer.h
noinst_LTLIBRARIES = libtools.la
libtools_la_SOURCES = Getopt.cpp KeyValFile.cpp ParamContainer.cpp Exception.h\
	FileSingle.cpp FileSingle.cpp Getopt.cpp KeyValFile.cpp\
	ParamContainer.cpp
