noinst_HEADERS = tnt_array1d.h tnt_array1d_utils.h tnt_array2d.h tnt_array2d_utils.h tnt_array3d.h \
	tnt_array3d_utils.h tnt_fortran_array1d.h tnt_fortran_array1d_utils.h tnt_fortran_array2d.h \
	tnt_fortran_array2d_utils.h tnt_fortran_array3d.h tnt_fortran_array3d_utils.h tnt.h tnt_i_refvec.h \
	tnt_lapack.h tnt_linalg.h tnt_math_utils.h tnt_matrix.h tnt_sparse_matrix.h tnt_sparse_vector.h \
	tnt_stopwatch.h tnt_subscript.h tnt_vector.h tnt_version.h VectorView.h
